--- a/OpenDTU_MQTTLogger/OpenDTU_MQTTLogger/OpenDTU_MQTTLogger.csproj
+++ b/OpenDTU_MQTTLogger/OpenDTU_MQTTLogger/OpenDTU_MQTTLogger.csproj
@@ -2,10 +2,14 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MQTTnet" Version="3.0.12" />
+  </ItemGroup>
 
 </Project>
