Autostart on startup

--- a/OpenDTU_MQTTLogger/OpenDTU_MQTTLogger/App.config
+++ b/OpenDTU_MQTTLogger/OpenDTU_MQTTLogger/App.config
@@ -25,6 +25,9 @@
             <setting name="LogInterval" serializeAs="String">
                 <value>300</value>
             </setting>
+            <setting name="Started" serializeAs="String">
+                <value>False</value>
+            </setting>
         </OpenDTU_MQTTLogger.Properties.Settings>
     </userSettings>
 </configuration>
