--- a/OpenDTU_MQTTLogger/OpenDTU_MQTTLogger/Properties/Settings.settings
+++ b/OpenDTU_MQTTLogger/OpenDTU_MQTTLogger/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="LogInterval" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">300</Value>
     </Setting>
+    <Setting Name="Started" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
